--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ function setTime() {
 
 	if (!military) {
 		tmp = hour; 
-		hour = hour % 12;
+		hour = (hour % 12) || 12;
 		pm = tmp-hour > 0; 
 	}
 	tickers.hour.innerHTML = hour;
